just in any case

--- a/Statis/MainPage.xaml
+++ b/Statis/MainPage.xaml
@@ -35,8 +35,8 @@
             <StackPanel x:Name="LoginStackPanel" Style="{StaticResource LoginPanelStyle}" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="19,0,25,21" Width="Auto">
                 <sdk:Label Content="Lietotājvārds:" Visibility="{Binding LoggedInVisibility}" Foreground="White" Height="Auto" HorizontalAlignment="Right" Margin="2,23,0,0" Name="label3" VerticalAlignment="Top" Width="Auto" />
                 <TextBox Height="23" Visibility="{Binding LoggedInVisibility}" HorizontalAlignment="Right" Margin="2,19,0,0" Text="{Binding UserName, Mode=TwoWay}" VerticalAlignment="Top" Width="95" />
-                <sdk:Label Visibility="{Binding LoggedInVisibility}" Height="Auto" HorizontalAlignment="Right" Margin="15,23,0,0" Name="label2" VerticalAlignment="Center" Width="Auto" Content="Parole:" Foreground="White" />
-                <sdk:Label Content="{Binding GreetingText}" Margin="0,15,0,0" Height="20" Foreground="White" Name="label4" Width="Auto" />
+                <sdk:Label Visibility="{Binding LoggedInVisibility}" Height="Auto" HorizontalAlignment="Right" Margin="15,23,0,0" VerticalAlignment="Center" Width="Auto" Content="Parole:" Foreground="White" />
+                <sdk:Label Content="{Binding GreetingText}" Margin="0,15,0,0" Height="20" Foreground="White" Width="Auto" />
                 <PasswordBox Visibility="{Binding LoggedInVisibility}" Height="23" HorizontalAlignment="Right" Margin="2,19,0,0" Password="{Binding Password, Mode=TwoWay}" Width="95" VerticalAlignment="Top" />
                 <Button Margin="10,19,0,0" Content="{Binding LoginLogoutText}" Command="{Binding LoginCommand}"></Button>
             </StackPanel>
